--- a/restaurant.html
+++ b/restaurant.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sidra's Restaurant</title>
   <link rel="stylesheet" href="restaurant.css">
+  <meta property="og:title" content="Sidra's Restaurant 🍴 | Authentic Pakistani Food">
+  <meta property="og:description" content="Delicious Pakistani recipes and cozy dining experience.">
+  <meta property="og:url" content="https://github.com/sidra-shoukat/SEO">
   <script src="optimization.js"></script>
 </head>
 <body>
@@ -78,3 +81,4 @@
 
 </body>
 </html>
+
