--- a/restaurant.html
+++ b/restaurant.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="restaurant.css">
   <meta property="og:title" content="Sidra's Restaurant 🍴 | Authentic Pakistani Food">
   <meta property="og:description" content="Delicious Pakistani recipes and cozy dining experience.">
-  <meta property="og:url" content="https://github.com/sidra-shoukat/restaurant-website">
+  <meta property="og:url" content="https://sidra-shoukat.github.io/restaurant-website/restaurant.html">
   <script src="optimization.js"></script>
 </head>
 <body>
@@ -81,5 +81,6 @@
 
 </body>
 </html>
+
 
 
